--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@
     margin-top: -4vw;
 }
 
-@media (max-width: 600px){
+@media (min-width: 600px){
     .selector{
         grid-template-areas: 
         "mtto"
