--- a/css/styles_ok_old.css
+++ b/css/styles_ok_old.css
@@ -5,7 +5,11 @@
     box-sizing: border-box;
     list-style: none;
 }
-
+.fondo{
+    width: 100%;
+    height: 40vw;
+    opacity: .4;
+}
 .contenedor{
     position: relative;
     display: grid;
@@ -19,23 +23,16 @@
     margin-bottom: 4vw;   
     background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
 }
-
-.fondo{
-    grid-area: fondo;
-    width: 100%;
-    height: 40vw;
-    opacity: .4;
-}
 .cabecera{
     grid-area: cabecera;
     color: black;
-    margin-top: -23vw;
+    margin-top: -22vw;
     z-index: 0;
 
 }
 .headTitle{
     text-align: center;
-    font-size: 3.5rem;
+    font-size: 5vw;
     font-weight: bold;
     margin-bottom: 1vw;
 }
@@ -99,6 +96,7 @@
     margin-top: 1vw;
     width: 30vw;
     padding-bottom: 4vw;
+    
 }
 #miPie{
     margin-top: -4vw;
@@ -115,41 +113,9 @@
         "oficina";
     }      
     .txtSubArti{
-        margin-left: 10.8rem;
-    }
-    .fondo{
-        height: 100%;
-    }
-    .cabecera{
-        margin-top: -13rem;
-    }       
-    .headTitle{
-        font-size: 3rem;
-    }
-    .headSubt1{
-        font-size: 1.4rem;
-
-    }
-    .headSubt2{
-        font-size: .9rem;
-    }    
-    .mttoImg, .ordImg, .redImg, .impImg, .audImg, .ofcImg{
-        width: 20rem;
-        height: 15rem;
-        margin-top: 3.5rem;
-        margin-bottom: 1rem;
-    }  
-    .txtArti{
-        font-size: 1.5rem;
-    }
-    .txtSubArti{
-        font-size: 1rem;
-        width: 15rem;
-        margin-left: 8rem;
-    }
-    #miPie{
-        margin-top: -1.7rem;
-    }
+        margin-left: 34vw;
+        
+    }             
 }
 
 
