--- a/css/styles.css
+++ b/css/styles.css
@@ -9,17 +9,17 @@
 .contenedor{
     position: relative;
     display: grid;
-    grid-template-columns: 1fr;
-
+    grid-template-columns: 
+        repeat(auto-fill, minmax(1fr));
+    /*grid-template-columns: 1fr;*/
 }
-
 .fondo{
     width: 100%;
     height: 40rem;
     opacity: .4;
 }
-.dos{
-    margin-top: -25rem;
+.fondoTxt{
+    margin-top: -28rem;
 }
 .cabecera{
     color: black;
@@ -45,25 +45,23 @@
 .selector{
     display: grid;
     grid-template-columns: 
-        repeat(auto-fill, minmax(300px, 1fr));
-    gap: 7rem;
-    margin-top: 12rem;
+        repeat(auto-fill, minmax(320px, 1fr));
+    gap: 4rem;
+    padding: 0 3rem 0 1.7rem;
+    margin-top: 3rem;
     margin-bottom: 15rem;
 }
-
-
-.mttoImg, .ordImg, .redImg, .impImg, .audImg, .ofcImg{
-    width: 25rem;
-    height: 15rem;
-    border-radius: 5rem;
-    border: .2rem solid blue;
-}
-
 .mttoImgTxt, .ordImgTxt, .redImgTxt, .impImgTxt, .audImgTxt, .ofcImgTxt{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items:center;
     text-align: center;
+}
+.mttoImg, .ordImg, .redImg, .impImg, .audImg, .ofcImg{
+    width: 20rem;
+    height: 15rem;
+    border-radius: 5rem;
+    border: .2rem solid blue;
 }
 .txtArti{
     font-size: 1.8rem;
